--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,12 @@ dependencies:
   dio: ^5.4.0
   image_gallery_saver: ^2.0.3
   fluttertoast: ^8.2.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  internet_connection_checker: ^1.0.0+1
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.7
   flutter_test:
     sdk: flutter
 
